--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -18,7 +18,7 @@
     sectionURL3:'#design_system', 
     sectionURL4:'#about',
     arrTxtColor:'',
-    headerBackgroundColor:'colorWhie'
+    headerBackgroundColor:'colorWhite'
     }) %>
 
   <div class="colorBgWhie pattern2">
