--- a/templates/intro/index.ejs
+++ b/templates/intro/index.ejs
@@ -41,8 +41,8 @@
       </li>
       <li class='item' style="background-image: url('LASO_AdminPanel.png')">
         <div class='content'>
-          <h2 class='title colorWhie'>LASO Admin Panel</h2>
-          <p class='description colorWhie'>
+          <h2 class='title colorWhite'>LASO Admin Panel</h2>
+          <p class='description colorWhite'>
             From Concept to Reality - Simplified User Management
           </p>
           <a href="/"><button class="intro">View Project</button></a>
