--- a/templates/caselog/index.ejs
+++ b/templates/caselog/index.ejs
@@ -116,7 +116,7 @@
   <div class="blankHXXS"></div>
   <!-- Content -->
   <section id="projects">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXXS"></div>
       <div class="wrapper">
         <div class="Grid Grid--full Grid--gutter">
@@ -683,7 +683,7 @@
 
   </section>
   <section id="design_system">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXS"></div>
 
       <!-- Arrow -->
