--- a/templates/caselog/mobile_landing/index.ejs
+++ b/templates/caselog/mobile_landing/index.ejs
@@ -121,7 +121,7 @@
 
   <!-- Content -->
   <section id="projects">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXXS"></div>
 
 
@@ -399,7 +399,7 @@
 
   </section>
   <section id="design_system">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXS"></div>
 
       <!-- Arrow -->
