--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -127,7 +127,7 @@
 
   <!-- Content -->
   <section id="projects">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXS"></div>
 
       <!-- Arrow -->
@@ -543,7 +543,7 @@
 
   </section>
   <section id="design_system">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXS"></div>
 
       <!-- Arrow -->
