--- a/templates/workroom/index.ejs
+++ b/templates/workroom/index.ejs
@@ -167,7 +167,7 @@
 
   <!-- Content -->
   <section id="projects">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXS"></div>
 
       <!-- Arrow -->
@@ -641,7 +641,7 @@
 
   </section>
   <section id="design_system">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXS"></div>
 
       <!-- Arrow -->
