--- a/templates/workshelf/index.ejs
+++ b/templates/workshelf/index.ejs
@@ -21,7 +21,7 @@
     headerBackgroundColor:'colorWhite'
     }) %>
 
-  <div class="colorBgWhie pattern2">
+  <div class="colorBgWhite pattern2">
     <div class="wrapper">
       <div class="blankHS"></div>
 
@@ -1267,7 +1267,7 @@
 
   </section>
   <section id="design_system">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXS"></div>
 
       <!-- Arrow -->
