case study final

--- a/html/main.css
+++ b/html/main.css
@@ -4318,7 +4318,9 @@ body .flex-container.Mobile {
 }
 
 /* ======== spacing in px ======== */
-
+.spacingXLarge {
+  height: 64px;
+}
 .spacingLarge {
   height: 48px;
 }
@@ -4337,10 +4339,6 @@ body .flex-container.Mobile {
 
 /* ======== spacing in px ======== */
 /* ======== spacing in em/vw ======== */
-
-.blankHTiny {
-  height: 0.8em;
-}
 
 .blankHXXS {
   display: block;
