--- a/templates/workfolder/bq_b2b_inventory_management/index.ejs
+++ b/templates/workfolder/bq_b2b_inventory_management/index.ejs
@@ -2,8 +2,9 @@
 <html lang="en" class="colorBgVW pattern1">
 
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, { SEO:false, Title:`Optimizing Pet Service Bookings by Vicky Wang`,
-  description:'Enhancing the Consumer Booking Experience', pageURL:'byp_b2c_booking/',
+<%- include(`${templatePath}/shared/head`, { SEO:false, Title:`Scaling Inventory Management for Growth
+`,
+  description:'Enhancing the Consumer Booking Experience', pageURL:'bq_b2b_inventory_management/',
   thumbnailImgURL: 'vickywang_web.png' }) %>
 <!--Head-->
 
@@ -13,19 +14,17 @@
         headerBackgroundColor:`colorWhite`, arrTxtColor:``, }) %>
   <div class="colorBgWhite pattern2">
     <div class="wrapper">
-      <div class="blankHS"></div>
+      <div class="blankHXS"></div>
       <div class="Grid Grid--full Grid--gutter">
         <div class="Grid-cell">
           <div class="element">
             <img class="widthXXS" src="../../logos/bq.svg" alt="Logo">
-
-
             <h1 class="fontWeight700">Scaling Inventory Management for Growth</h1>
             <h3 class="fontWeight300">From deep-click navigation to filter-based control</h3>
           </div>
         </div>
       </div>
-      <div class="spacingMedium"></div>
+      <div class="spacingLarge"></div>
 
       <div class="Grid Grid--gutters Grid--cols-3" data-module="countup">
         <div class="Grid-cell">
@@ -33,11 +32,11 @@
             <h6 class="chipSmall colorBQTeal100 colorBQTeal700">
               Saves Providers Time
             </h6>
-            <h2 class="stat-figure">
+            <h5 class="stat-figure">
               <span class="stat-prefix specialTextL fontWeight700">+</span>
               <span class="stat-number specialTextL fontWeight700" data-countup-number="3">3</span>
-              <span class="stat-suffix">x</span>
-            </h2>
+              <span class="stat-suffix specialTextS">x</span>
+            </h5>
             <h5 class="fontWeight400">High-supply providers saved hours per week</h5>
 
           </div>
@@ -47,11 +46,11 @@
             <h6 class="chipSmall colorBQTeal100 colorBQTeal700">
               Reduces QA & Maintenance Overhead
             </h6>
-            <h2 class="stat-figure">
+            <h5 class="stat-figure">
               <span class="stat-prefix specialTextL fontWeight700">-</span>
               <span class="stat-number specialTextL fontWeight700" data-countup-number="75">75</span>
-              <span class="stat-suffix">%</span>
-            </h2>
+              <span class="stat-suffix specialTextS">%</span>
+            </h5>
             <h5 class="fontWeight400">
               Reusable components cut QA effort
             </h5>
@@ -63,21 +62,21 @@
             <h6 class="chipSmall colorBQTeal100 colorBQTeal700">
               Scales Across Product Lines
             </h6>
-            <h2 class="stat-figure">
+            <h5 class="stat-figure">
               <span class="stat-prefix specialTextL fontWeight700">+</span>
               <span class="stat-number specialTextL fontWeight700" data-countup-number="3">3</span>
-              <span class="stat-suffix">+</span>
-            </h2>
+              <span class="stat-suffix specialTextS">+</span>
+            </h5>
             <h5 class="fontWeight400">
               Same design now reused in SuperAdmin</h5>
 
           </div>
         </div>
       </div>
-      <div class="spacingLarge"></div>
+      <div class="spacingMedium"></div>
 
       <hr>
-      <div class="spacingSmall"></div>
+      <div class="spacingXSmall"></div>
 
       <div class="Grid Grid--full Grid--gutter">
         <div class="Grid-cell">
@@ -97,7 +96,7 @@
           <h5 class="textItalic">Stakeholders <span class="fontWeight500"><a class="textUnderline fontWeight500" href="https://www.linkedin.com/in/jemaier">Joe Maier</a>, <a class="textUnderline fontWeight500" href="https://www.linkedin.com/in/kimconnolly1">Kim Connolly</a></span></h5>
         </div>
       </div>
-      <div class="blankHXS"></div>
+      <div class="spacingXLarge"></div>
 
 
     </div>
@@ -107,7 +106,7 @@
   <div class="colorBgImg">
     <div class="wrapper">
 
-      <div class="blankHTiny"></div>
+      <div class="spacingSmall"></div>
 
       <div class="Grid Grid--full Grid--gutter">
         <div class="Grid-cell">
