content update and clean up

--- a/templates/workfolder/bq_b2b_inventory_management/index.ejs
+++ b/templates/workfolder/bq_b2b_inventory_management/index.ejs
@@ -121,7 +121,7 @@
         <div class="Grid-cell">
 
           <div class="element">
-            <img class="modal-target" src="../diagram_inventory_management_before.svg" alt="Legacy inventory UX">
+            <img src="diagram_inventory_management_before.svg" alt="Legacy inventory UX diagram">
             <div class="spacingMedium"></div>
 
             <h5 class="fontWeight600">Category Navigation (Before)</h5>
@@ -160,7 +160,7 @@
         <div class="Grid-cell">
 
           <div class="element">
-            <img class="modal-target" src="../diagram_inventory_management_after.svg" alt="Redesigned inventory UX">
+            <img src="diagram_inventory_management_after.svg" alt="Redesigned inventory UX diagram">
             <div class="spacingMedium"></div>
 
             <h5 class="fontWeight600">Unified Inventory (After)</h5>
