--- a/templates/javascript-learning/index.html
+++ b/templates/javascript-learning/index.html
@@ -34,13 +34,53 @@
   <br>
   <br>
   <br>
+  <div class="wrapper">
+    <div class="Grid Grid--full Grid--gutter">
+      <div class="Grid-cell">
+        <div class="element">
+          <h4 class="fontWeight500" class="fontWeight500">Restarted | 2025.10</h4>
+          <a class="textUnderline" href="2510_warmup/">
+            <h6>Warm up
+            </h6>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <hr>
+
+  <br>
   <br>
   <main class="wrapper">
 
     <div class="Grid Grid--full Grid--gutter">
       <div class="Grid-cell">
         <div class="element">
-          <h4 class="fontWeight500" class="fontWeight500">New Roadmap | Uses builder-loop to reinforce learning</h4>
+          <h4 class="fontWeight500" class="fontWeight500">Archive on 2025.10 ↓</h4>
+
+          <h4 class="fontWeight500" class="fontWeight500"> New Roadmap | Uses builder-loop to reinforce learning</h4>
 
           <h6><strong>Goal</strong>: Build scalable mental models + reusable code patterns</h6>
           <h6><strong>Principle</strong>: Every step builds both a small project and a deeper system insight</h6>
@@ -48,7 +88,7 @@
           <br>
           <br>
 
-            <h6 class="fontWeight500">Phase 0: Rethink Practice as System Creation</h6>
+          <h6 class="fontWeight500">Phase 0: Rethink Practice as System Creation</h6>
           <br>
 
           <ul class="listCircle">
